A hacked version because OWLDoc from Protege is broken. Changes here are aimed at creating documentation for a SINGLE ontology. Not all the changes needed are in the java. Some lisp code fixes a couple of last things.
Makefile - because I always forget the maven commands

owlbrowser/src/main/resources/css/default.css
- Add in contents of owl.css since it wasn't being copied. Adjust a couple of margins and the height of the entity list widgets.

owlhtml/src/main/java/org/coode/html/doclet/AbstractTitleDoclet.java
Comment out some code that wasn't working anyways.

owlhtml/src/main/java/org/coode/html/doclet/OWLEntityTitleDoclet.java
- Add the IRI as subtitle for term summaries

owlhtml/src/main/java/org/coode/html/doclet/TabsDoclet.java
- Don't include the cloud link in nav if OWLHTMLProperty.optionRenderOntologySummaryCloud is false

owlhtml/src/main/java/org/coode/html/page/OWLDocPage.java
- Don't include the OWL inside link to google code

owlhtml/src/main/resources/doclets.config
- Don't include the cloud doclet